refactored: initialization, debug_mode, cleanup etc

--- a/LinkedinJobScraper.ipynb
+++ b/LinkedinJobScraper.ipynb
@@ -2,42 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import re\n",
+    "from bs4 import BeautifulSoup\n",
+    "import csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#configurations\n",
+    "base_url_prefix = \"https://www.linkedin.com/jobs/search?keywords=software%20engineer%20OR%20engineering%20manager&location=United%20States&pageNum=0&start=\"\n",
+    "row_increment_default = 25\n",
+    "max_row_default = 51\n",
+    "debug_mode = False\n",
+    "debug_company=\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#initializations\n",
+    "jobs={}\n",
+    "seen_jobs={}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Failed to fetch job listings.\n",
-      "jobs found:45\n",
-      "Ever: {'eng': 3, 'em': 0, 'maxDate': '2024-05-16'}\n",
-      "Ashby: {'eng': 0, 'em': 3, 'maxDate': '2024-05-01'}\n",
-      "Airbnb: {'eng': 2, 'em': 0, 'maxDate': '2024-05-16'}\n",
+      "jobs found:47\n",
+      "Google: {'eng': 13, 'em': 0, 'maxDate': '2024-05-17'}\n",
+      "The Walt Disney Company: {'eng': 2, 'em': 0, 'maxDate': '2024-05-18'}\n",
+      "Nike: {'eng': 2, 'em': 0, 'maxDate': '2024-05-17'}\n",
       "LinkedIn: {'eng': 2, 'em': 0, 'maxDate': '2024-05-14'}\n",
-      "Open Systems Inc.: {'eng': 2, 'em': 0, 'maxDate': '2024-05-15'}\n",
-      "Netflix: {'eng': 2, 'em': 0, 'maxDate': '2024-05-09'}\n",
-      "Nike: {'eng': 2, 'em': 0, 'maxDate': '2024-05-13'}\n",
+      "Ever: {'eng': 2, 'em': 0, 'maxDate': '2024-05-16'}\n",
       "Midpoint Markets: {'eng': 2, 'em': 0, 'maxDate': '2024-05-11'}\n",
-      "Tagup, Inc.: {'eng': 2, 'em': 0, 'maxDate': '2024-05-10'}\n",
-      "Saragossa: {'eng': 2, 'em': 0, 'maxDate': '2024-05-13'}\n",
-      "Microsoft: {'eng': 2, 'em': 0, 'maxDate': '2024-05-03'}\n",
-      "Slack: {'eng': 2, 'em': 0, 'maxDate': '2024-05-13'}\n"
+      "Genesis Therapeutics: {'eng': 2, 'em': 0, 'maxDate': '2024-04-22'}\n"
      ]
     }
    ],
    "source": [
-    "import requests\n",
-    "import re\n",
-    "from bs4 import BeautifulSoup\n",
-    "\n",
-    "jobs={}\n",
-    "seen_jobs={}\n",
-    "for i in range(0,51,25):\n",
-    "    base_url = f\"https://www.linkedin.com/jobs/search?keywords=software%20engineer%20OR%20engineering%20manager&location=United%20States&pageNum=0&start={i}\"\n",
-    "\n",
-    "    #target_roles=['Software Engineer','Engineering Manager']\n",
+    "for i in range(0,max_row_default,row_increment_default):\n",
+    "    base_url = f\"{base_url_prefix}{i}\"\n",
     "    response = requests.get(base_url)\n",
+    "    \n",
     "    if response.status_code == 200:\n",
     "        soup = BeautifulSoup(response.text, 'html.parser')\n",
     "        job_listings = soup.find_all('div', {'class':'job-search-card'})\n",
@@ -51,19 +75,21 @@
     "            location = job.find('span', {'class': 'job-search-card__location'}).text.strip()\n",
     "            link = job.find('a', {'class': 'base-card__full-link'}).attrs['href']\n",
     "            pattern = r\"(.*-)(\\d+)\"\n",
-    "            sanitized_link = re.search(pattern,link).group(2)\n",
+    "            job_id = re.search(pattern,link).group(2)\n",
     "\n",
     "            #check cache; skip if already seen\n",
-    "            if seen_jobs.get(sanitized_link,'') != '':\n",
-    "                #print(f\"we've seen {sanitized_link}\")\n",
+    "            if seen_jobs.get(job_id,'') != '':\n",
+    "                if debug_mode:\n",
+    "                    print(f\"we've seen {job_id}\")\n",
     "                continue\n",
     "            else:\n",
-    "                seen_jobs[sanitized_link]=True\n",
+    "                seen_jobs[job_id]=True\n",
     "                \n",
     "            #test\n",
-    "#             if company != 'Airbnb':\n",
-    "#                 continue\n",
-    "#             print(f\"title:{title}, id:{sanitized_link}, date:{date}\")\n",
+    "            if debug_mode and company != debug_company:\n",
+    "                continue\n",
+    "            elif debug_mode:\n",
+    "                print(f\"title:{title}, id:{sanitized_link}, date:{date}\")\n",
     "    \n",
     "            #initialize kv entry\n",
     "            if company not in jobs:\n",
@@ -102,7 +128,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#todo connect to google drive via api"
+   ]
   }
  ],
  "metadata": {
