added csv read/write capabilities; turned csv into db

--- a/LinkedinJobScraper.ipynb
+++ b/LinkedinJobScraper.ipynb
@@ -2,19 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import re\n",
     "from bs4 import BeautifulSoup\n",
-    "import csv"
+    "import csv\n",
+    "import os\n",
+    "\n",
+    "#methodology; TLDR: idempotent write op with job-id as primary key\n",
+    "# 1. use cvs as database\n",
+    "# 2. load csv in cache\n",
+    "# 3. scrape & parse linkedin jobs\n",
+    "# 4. look up jobid, omit if exists in cache, add to cache and jobs_to_add array\n",
+    "# 5. write jobs_to_add back to csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,37 +31,251 @@
     "row_increment_default = 25\n",
     "max_row_default = 51\n",
     "debug_mode = False\n",
-    "debug_company=\"\""
+    "debug_company=\"\"\n",
+    "csv_name=\"linkedin-job-scraper-database.csv\"\n",
+    "csv_columns=['job_id','company','job_type','title','location','link','date']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "#initializations\n",
-    "jobs={}\n",
-    "seen_jobs={}"
+    "jobs={} # updated cache, won't be written back to csv\n",
+    "jobs_to_add=[] # write-back as additions, strictly as a write buffer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_csv_in_cache(reader):\n",
+    "    for row in reader: #reader knows first row is headers\n",
+    "        key = row['job_id']\n",
+    "        value = {k: v for k, v in row.items() if k != 'job_id'}\n",
+    "        jobs[key] = value\n",
+    "\n",
+    "    print(f\"{len(jobs)} rows read from csv\")\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "jobs found:47\n",
-      "Google: {'eng': 13, 'em': 0, 'maxDate': '2024-05-17'}\n",
-      "The Walt Disney Company: {'eng': 2, 'em': 0, 'maxDate': '2024-05-18'}\n",
-      "Nike: {'eng': 2, 'em': 0, 'maxDate': '2024-05-17'}\n",
-      "LinkedIn: {'eng': 2, 'em': 0, 'maxDate': '2024-05-14'}\n",
-      "Ever: {'eng': 2, 'em': 0, 'maxDate': '2024-05-16'}\n",
-      "Midpoint Markets: {'eng': 2, 'em': 0, 'maxDate': '2024-05-11'}\n",
-      "Genesis Therapeutics: {'eng': 2, 'em': 0, 'maxDate': '2024-04-22'}\n"
+      "94 rows read from csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load csv into cache\n",
+    "if not os.path.exists(csv_name):\n",
+    "    with open(csv_name, 'w', newline='') as csvfile:\n",
+    "        writer = csv.writer(csvfile) #this will create new file if not exist\n",
+    "        writer.writerow(csv_columns)\n",
+    "else:\n",
+    "    with open(csv_name, 'r+', newline='') as csvfile:\n",
+    "        writer = csv.writer(csvfile)\n",
+    "        reader = csv.DictReader(csvfile)\n",
+    "        load_csv_in_cache(reader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we've seen The Walt Disney Company-3929518602\n",
+      "we've seen Nike-3925757014\n",
+      "we've seen Nike-3928633016\n",
+      "we've seen ECP-3929025692\n",
+      "we've seen Flint-3929987470\n",
+      "we've seen Kindo-3928613760\n",
+      "we've seen Lockheed Martin-3926404198\n",
+      "we've seen Lockheed Martin-3931026727\n",
+      "we've seen Shopmonkey-3930814205\n",
+      "we've seen Interclypse-3929257489\n",
+      "we've seen Mayo Clinic-3927682458\n",
+      "we've seen Netflix-3931040226\n",
+      "we've seen Trilogy International-3917539672\n",
+      "we've seen LinkedIn-3921122178\n",
+      "we've seen Netflix-3922244352\n",
+      "we've seen iSqFt-3922090249\n",
+      "we've seen Lumafield-3931029784\n",
+      "we've seen Ever-3927302676\n",
+      "we've seen Airbnb-3927279164\n",
+      "we've seen LinkedIn-3925338431\n",
+      "we've seen Ekho (YC S22)-3927314395\n",
+      "we've seen Tripalink-3919967332\n",
+      "we've seen Diesel Laptops-3930095568\n",
+      "we've seen SHEIN Technology LLC-3930836493\n",
+      "we've seen Amicus-3924707625\n",
+      "we've seen Hertz-3916825101\n",
+      "we've seen Backbone-3926154951\n",
+      "we've seen Charles Schwab-3927384721\n",
+      "we've seen Mayo Clinic School of Health Sciences-3928296915\n",
+      "we've seen Tagup, Inc.-3921372669\n",
+      "we've seen Saragossa-3919673531\n",
+      "we've seen ClickBank-3926345917\n",
+      "we've seen Midpoint Markets-3922830357\n",
+      "we've seen Open Systems Inc.-3926387167\n",
+      "we've seen Summit Human Capital-3922484161\n",
+      "we've seen Burro-3925099308\n",
+      "we've seen Donato Technologies, Inc.-3927682220\n",
+      "we've seen MoveOn-3926833972\n",
+      "we've seen Genesis Therapeutics-3921693253\n",
+      "we've seen UpRecruit-3928315595\n",
+      "we've seen Ever-3927304003\n",
+      "we've seen Standard Metrics-3929260685\n",
+      "we've seen Lyft-3928026636\n",
+      "we've seen Vooma-3925749707\n",
+      "we've seen Datum Technologies Group-3922479685\n",
+      "we've seen Accroid Inc-3930226043\n",
+      "we've seen CVS Health-3918297455\n",
+      "we've seen Microsoft-3927674438\n",
+      "we've seen City of Philadelphia-3922421297\n",
+      "we've seen Saragossa-3924260826\n",
+      "we've seen Genesis Therapeutics-3923616537\n",
+      "we've seen haku-3925247856\n",
+      "we've seen The Walt Disney Company-3927615668\n",
+      "we've seen Genesis10-3922482501\n",
+      "we've seen Airbnb-3911684094\n",
+      "we've seen Vectara-3929260702\n",
+      "we've seen Rexus Group-3929908903\n",
+      "we've seen Micro-Trak Systems, Inc.-3930341994\n",
+      "we've seen Open Systems Inc.-3919786437\n",
+      "we've seen The Walt Disney Company-3929518602\n",
+      "we've seen Flint-3929987470\n",
+      "we've seen Nike-3928633016\n",
+      "we've seen Airbnb-3927279164\n",
+      "we've seen Lockheed Martin-3931026727\n",
+      "we've seen ECP-3929025692\n",
+      "we've seen Lockheed Martin-3926404198\n",
+      "we've seen Shopmonkey-3930814205\n",
+      "we've seen Netflix-3931040226\n",
+      "we've seen Trilogy International-3917539672\n",
+      "we've seen LinkedIn-3921122178\n",
+      "we've seen Netflix-3922244352\n",
+      "we've seen Ever-3927302676\n",
+      "we've seen Kindo-3928613760\n",
+      "we've seen iSqFt-3922090249\n",
+      "we've seen Lyft-3928026636\n",
+      "we've seen Midpoint Markets-3922624055\n",
+      "we've seen LinkedIn-3925338431\n",
+      "we've seen Tripalink-3919967332\n",
+      "we've seen The Walt Disney Company-3927615668\n",
+      "we've seen Diesel Laptops-3930095568\n",
+      "we've seen Interclypse-3929257489\n",
+      "we've seen Mayo Clinic School of Health Sciences-3928296915\n",
+      "we've seen SHEIN Technology LLC-3930836493\n",
+      "we've seen Amicus-3924707625\n",
+      "we've seen Hertz-3916825101\n",
+      "we've seen Backbone-3926154951\n",
+      "we've seen Tagup, Inc.-3921372669\n",
+      "we've seen Saragossa-3919673531\n",
+      "we've seen ClickBank-3926345917\n",
+      "we've seen Midpoint Markets-3922830357\n",
+      "we've seen Open Systems Inc.-3926387167\n",
+      "we've seen Summit Human Capital-3922484161\n",
+      "we've seen Rose AI-3928182434\n",
+      "we've seen MoveOn-3926833972\n",
+      "we've seen Donato Technologies, Inc.-3927682220\n",
+      "we've seen Genesis Therapeutics-3921693253\n",
+      "we've seen Burro-3925099308\n",
+      "we've seen Reflex-3928630076\n",
+      "we've seen UpRecruit-3928315595\n",
+      "we've seen Ever-3927304003\n",
+      "we've seen Standard Metrics-3929260685\n",
+      "we've seen CVS Health-3918297455\n",
+      "we've seen Microsoft-3927674438\n",
+      "we've seen Ashby-3915149464\n",
+      "we've seen Accroid Inc-3930226043\n",
+      "we've seen Saragossa-3924260826\n",
+      "we've seen Genesis Therapeutics-3923616537\n",
+      "we've seen Tecton-3928530214\n",
+      "we've seen haku-3925247856\n",
+      "we've seen Howso-3926775589\n",
+      "we've seen Beam Benefits-3917572036\n",
+      "we've seen Vectara-3929260702\n",
+      "we've seen Rexus Group-3929908903\n",
+      "we've seen SynergisticIT-3930838913\n",
+      "we've seen Open Systems Inc.-3919786437\n",
+      "we've seen DivIHN Integration Inc-3930254595\n",
+      "we've seen GEICO-3929413796\n",
+      "we've seen Talogy-3925045205\n",
+      "we've seen Ashby-3915151185\n",
+      "we've seen The Walt Disney Company-3929518602\n",
+      "we've seen Nike-3925757014\n",
+      "we've seen Nike-3928633016\n",
+      "we've seen ECP-3929025692\n",
+      "we've seen Flint-3929987470\n",
+      "we've seen Kindo-3928613760\n",
+      "we've seen Lockheed Martin-3926404198\n",
+      "we've seen Lockheed Martin-3931026727\n",
+      "we've seen Shopmonkey-3930814205\n",
+      "we've seen Interclypse-3929257489\n",
+      "we've seen Mayo Clinic-3927682458\n",
+      "we've seen Netflix-3931040226\n",
+      "we've seen Trilogy International-3917539672\n",
+      "we've seen LinkedIn-3921122178\n",
+      "we've seen Netflix-3922244352\n",
+      "we've seen iSqFt-3922090249\n",
+      "we've seen Lumafield-3931029784\n",
+      "we've seen Ever-3927302676\n",
+      "we've seen Airbnb-3927279164\n",
+      "we've seen LinkedIn-3925338431\n",
+      "we've seen Ekho (YC S22)-3927314395\n",
+      "we've seen Tripalink-3919967332\n",
+      "we've seen Diesel Laptops-3930095568\n",
+      "we've seen SHEIN Technology LLC-3930836493\n",
+      "we've seen Amicus-3924707625\n",
+      "we've seen Hertz-3916825101\n",
+      "we've seen Backbone-3926154951\n",
+      "we've seen Charles Schwab-3927384721\n",
+      "we've seen Mayo Clinic School of Health Sciences-3928296915\n",
+      "we've seen Tagup, Inc.-3921372669\n",
+      "we've seen Saragossa-3919673531\n",
+      "we've seen ClickBank-3926345917\n",
+      "we've seen Midpoint Markets-3922830357\n",
+      "we've seen Open Systems Inc.-3926387167\n",
+      "we've seen Summit Human Capital-3922484161\n",
+      "we've seen Burro-3925099308\n",
+      "we've seen Donato Technologies, Inc.-3927682220\n",
+      "we've seen MoveOn-3926833972\n",
+      "we've seen Genesis Therapeutics-3921693253\n",
+      "we've seen UpRecruit-3928315595\n",
+      "we've seen Ever-3927304003\n",
+      "we've seen Standard Metrics-3929260685\n",
+      "we've seen Lyft-3928026636\n",
+      "we've seen Vooma-3925749707\n",
+      "we've seen Datum Technologies Group-3922479685\n",
+      "we've seen Accroid Inc-3930226043\n",
+      "we've seen CVS Health-3918297455\n",
+      "we've seen Microsoft-3927674438\n",
+      "we've seen City of Philadelphia-3922421297\n",
+      "we've seen Saragossa-3924260826\n",
+      "we've seen Genesis Therapeutics-3923616537\n",
+      "we've seen haku-3925247856\n",
+      "we've seen The Walt Disney Company-3927615668\n",
+      "we've seen Genesis10-3922482501\n",
+      "we've seen Airbnb-3911684094\n",
+      "we've seen Vectara-3929260702\n",
+      "we've seen Rexus Group-3929908903\n",
+      "we've seen Micro-Trak Systems, Inc.-3930341994\n",
+      "we've seen Open Systems Inc.-3919786437\n"
      ]
     }
    ],
@@ -61,7 +283,7 @@
     "for i in range(0,max_row_default,row_increment_default):\n",
     "    base_url = f\"{base_url_prefix}{i}\"\n",
     "    response = requests.get(base_url)\n",
-    "    \n",
+    "\n",
     "    if response.status_code == 200:\n",
     "        soup = BeautifulSoup(response.text, 'html.parser')\n",
     "        job_listings = soup.find_all('div', {'class':'job-search-card'})\n",
@@ -70,50 +292,61 @@
     "                date = job.find('time', {'class':'job-search-card__listdate'}).attrs['datetime']\n",
     "            except AttributeError:\n",
     "                date = job.find('time', {'class':'job-search-card__listdate--new'}).attrs['datetime']\n",
+    "            \n",
     "            title = job.find('h3', {'class': 'base-search-card__title'}).text.strip()\n",
+    "            job_type = 'em' if 'manager' in title.lower() else 'eng'\n",
     "            company = job.find('a', {'class': 'hidden-nested-link'}).text.strip()\n",
     "            location = job.find('span', {'class': 'job-search-card__location'}).text.strip()\n",
     "            link = job.find('a', {'class': 'base-card__full-link'}).attrs['href']\n",
     "            pattern = r\"(.*-)(\\d+)\"\n",
     "            job_id = re.search(pattern,link).group(2)\n",
     "\n",
-    "            #check cache; skip if already seen\n",
-    "            if seen_jobs.get(job_id,'') != '':\n",
+    "            #debug\n",
+    "            if debug_mode and debug_company != \"\" and company == debug_company:\n",
+    "                print(f\"id:{job_id},title:{title},job_type:{job_type},link:{link}\")\n",
+    "            \n",
+    "            #look up job_id, omit if cache hit, add to cache and jobs_to_add array if cache miss\n",
+    "            if jobs.get(job_id,'') != '': #cache hit\n",
     "                if debug_mode:\n",
-    "                    print(f\"we've seen {job_id}\")\n",
+    "                    print(f\"we've seen {company}-{job_id}\")\n",
     "                continue\n",
-    "            else:\n",
-    "                seen_jobs[job_id]=True\n",
+    "            else:                    \n",
+    "                jobs.setdefault(job_id,{\n",
+    "                    csv_columns[1]: company,\n",
+    "                    csv_columns[2]: job_type,\n",
+    "                    csv_columns[3]: title,\n",
+    "                    csv_columns[4]: location,\n",
+    "                    csv_columns[5]: link,\n",
+    "                    csv_columns[6]: date\n",
+    "                })\n",
+    "                jobs_to_add.append([job_id,company,job_type,title,location,link,date])\n",
     "                \n",
-    "            #test\n",
-    "            if debug_mode and company != debug_company:\n",
-    "                continue\n",
-    "            elif debug_mode:\n",
-    "                print(f\"title:{title}, id:{sanitized_link}, date:{date}\")\n",
-    "    \n",
-    "            #initialize kv entry\n",
-    "            if company not in jobs:\n",
-    "                jobs.setdefault(company,{})\n",
-    "                jobs[company]={'eng':0,'em':0,'maxDate':''}\n",
-    "                \n",
-    "            #increment count\n",
-    "            if 'Manager' not in title:\n",
-    "                jobs[company]['eng']=jobs.get(company,{}).get('eng',0)+1\n",
-    "            else:\n",
-    "                jobs[company]['em']=jobs.get(company,{}).get('em',0)+1\n",
-    "                \n",
-    "            #set max date\n",
-    "            jobs[company]['maxDate'] = max(jobs[company]['maxDate'], date)\n",
-    "\n",
     "    else:\n",
     "        print(\"Failed to fetch job listings.\")\n",
-    "        break\n",
-    "print(f\"jobs found:{len(jobs)}\")\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 jobs added\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(csv_name, 'a', newline='') as csvfile:\n",
+    "    writer = csv.writer(csvfile)\n",
     "\n",
-    "jobs=dict(sorted(jobs.items(),key=lambda x:x[1]['eng']+x[1]['em'], reverse=True))\n",
-    "filtered_jobs={k:v for k,v in jobs.items() if v['eng']+v['em']>1}\n",
-    "print('\\n'.join([f\"{key}: {value}\" for key, value in filtered_jobs.items()]))\n",
-    "#print('\\n'.join([f\"{key}: {value}\" for key, value in seen_jobs.items()]))"
+    "    # Append all new rows\n",
+    "    writer.writerows(jobs_to_add)\n",
+    "    print(f\"{len(jobs_to_add)} jobs added\")\n",
+    "jobs_to_add=[] #reset"
    ]
   },
   {
