added pandas for data aggregation

--- a/LinkedinJobScraper.ipynb
+++ b/LinkedinJobScraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
     "#configurations\n",
     "base_url_prefix = \"https://www.linkedin.com/jobs/search?keywords=software%20engineer%20OR%20engineering%20manager&location=United%20States&pageNum=0&start=\"\n",
     "row_increment_default = 25\n",
-    "max_row_default = 51\n",
+    "max_row_default = 501\n",
     "debug_mode = False\n",
     "debug_company=\"\"\n",
     "csv_name=\"linkedin-job-scraper-database.csv\"\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -91,194 +91,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 156,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "we've seen The Walt Disney Company-3929518602\n",
-      "we've seen Nike-3925757014\n",
-      "we've seen Nike-3928633016\n",
-      "we've seen ECP-3929025692\n",
-      "we've seen Flint-3929987470\n",
-      "we've seen Kindo-3928613760\n",
-      "we've seen Lockheed Martin-3926404198\n",
-      "we've seen Lockheed Martin-3931026727\n",
-      "we've seen Shopmonkey-3930814205\n",
-      "we've seen Interclypse-3929257489\n",
-      "we've seen Mayo Clinic-3927682458\n",
-      "we've seen Netflix-3931040226\n",
-      "we've seen Trilogy International-3917539672\n",
-      "we've seen LinkedIn-3921122178\n",
-      "we've seen Netflix-3922244352\n",
-      "we've seen iSqFt-3922090249\n",
-      "we've seen Lumafield-3931029784\n",
-      "we've seen Ever-3927302676\n",
-      "we've seen Airbnb-3927279164\n",
-      "we've seen LinkedIn-3925338431\n",
-      "we've seen Ekho (YC S22)-3927314395\n",
-      "we've seen Tripalink-3919967332\n",
-      "we've seen Diesel Laptops-3930095568\n",
-      "we've seen SHEIN Technology LLC-3930836493\n",
-      "we've seen Amicus-3924707625\n",
-      "we've seen Hertz-3916825101\n",
-      "we've seen Backbone-3926154951\n",
-      "we've seen Charles Schwab-3927384721\n",
-      "we've seen Mayo Clinic School of Health Sciences-3928296915\n",
-      "we've seen Tagup, Inc.-3921372669\n",
-      "we've seen Saragossa-3919673531\n",
-      "we've seen ClickBank-3926345917\n",
-      "we've seen Midpoint Markets-3922830357\n",
-      "we've seen Open Systems Inc.-3926387167\n",
-      "we've seen Summit Human Capital-3922484161\n",
-      "we've seen Burro-3925099308\n",
-      "we've seen Donato Technologies, Inc.-3927682220\n",
-      "we've seen MoveOn-3926833972\n",
-      "we've seen Genesis Therapeutics-3921693253\n",
-      "we've seen UpRecruit-3928315595\n",
-      "we've seen Ever-3927304003\n",
-      "we've seen Standard Metrics-3929260685\n",
-      "we've seen Lyft-3928026636\n",
-      "we've seen Vooma-3925749707\n",
-      "we've seen Datum Technologies Group-3922479685\n",
-      "we've seen Accroid Inc-3930226043\n",
-      "we've seen CVS Health-3918297455\n",
-      "we've seen Microsoft-3927674438\n",
-      "we've seen City of Philadelphia-3922421297\n",
-      "we've seen Saragossa-3924260826\n",
-      "we've seen Genesis Therapeutics-3923616537\n",
-      "we've seen haku-3925247856\n",
-      "we've seen The Walt Disney Company-3927615668\n",
-      "we've seen Genesis10-3922482501\n",
-      "we've seen Airbnb-3911684094\n",
-      "we've seen Vectara-3929260702\n",
-      "we've seen Rexus Group-3929908903\n",
-      "we've seen Micro-Trak Systems, Inc.-3930341994\n",
-      "we've seen Open Systems Inc.-3919786437\n",
-      "we've seen The Walt Disney Company-3929518602\n",
-      "we've seen Flint-3929987470\n",
-      "we've seen Nike-3928633016\n",
-      "we've seen Airbnb-3927279164\n",
-      "we've seen Lockheed Martin-3931026727\n",
-      "we've seen ECP-3929025692\n",
-      "we've seen Lockheed Martin-3926404198\n",
-      "we've seen Shopmonkey-3930814205\n",
-      "we've seen Netflix-3931040226\n",
-      "we've seen Trilogy International-3917539672\n",
-      "we've seen LinkedIn-3921122178\n",
-      "we've seen Netflix-3922244352\n",
-      "we've seen Ever-3927302676\n",
-      "we've seen Kindo-3928613760\n",
-      "we've seen iSqFt-3922090249\n",
-      "we've seen Lyft-3928026636\n",
-      "we've seen Midpoint Markets-3922624055\n",
-      "we've seen LinkedIn-3925338431\n",
-      "we've seen Tripalink-3919967332\n",
-      "we've seen The Walt Disney Company-3927615668\n",
-      "we've seen Diesel Laptops-3930095568\n",
-      "we've seen Interclypse-3929257489\n",
-      "we've seen Mayo Clinic School of Health Sciences-3928296915\n",
-      "we've seen SHEIN Technology LLC-3930836493\n",
-      "we've seen Amicus-3924707625\n",
-      "we've seen Hertz-3916825101\n",
-      "we've seen Backbone-3926154951\n",
-      "we've seen Tagup, Inc.-3921372669\n",
-      "we've seen Saragossa-3919673531\n",
-      "we've seen ClickBank-3926345917\n",
-      "we've seen Midpoint Markets-3922830357\n",
-      "we've seen Open Systems Inc.-3926387167\n",
-      "we've seen Summit Human Capital-3922484161\n",
-      "we've seen Rose AI-3928182434\n",
-      "we've seen MoveOn-3926833972\n",
-      "we've seen Donato Technologies, Inc.-3927682220\n",
-      "we've seen Genesis Therapeutics-3921693253\n",
-      "we've seen Burro-3925099308\n",
-      "we've seen Reflex-3928630076\n",
-      "we've seen UpRecruit-3928315595\n",
-      "we've seen Ever-3927304003\n",
-      "we've seen Standard Metrics-3929260685\n",
-      "we've seen CVS Health-3918297455\n",
-      "we've seen Microsoft-3927674438\n",
-      "we've seen Ashby-3915149464\n",
-      "we've seen Accroid Inc-3930226043\n",
-      "we've seen Saragossa-3924260826\n",
-      "we've seen Genesis Therapeutics-3923616537\n",
-      "we've seen Tecton-3928530214\n",
-      "we've seen haku-3925247856\n",
-      "we've seen Howso-3926775589\n",
-      "we've seen Beam Benefits-3917572036\n",
-      "we've seen Vectara-3929260702\n",
-      "we've seen Rexus Group-3929908903\n",
-      "we've seen SynergisticIT-3930838913\n",
-      "we've seen Open Systems Inc.-3919786437\n",
-      "we've seen DivIHN Integration Inc-3930254595\n",
-      "we've seen GEICO-3929413796\n",
-      "we've seen Talogy-3925045205\n",
-      "we've seen Ashby-3915151185\n",
-      "we've seen The Walt Disney Company-3929518602\n",
-      "we've seen Nike-3925757014\n",
-      "we've seen Nike-3928633016\n",
-      "we've seen ECP-3929025692\n",
-      "we've seen Flint-3929987470\n",
-      "we've seen Kindo-3928613760\n",
-      "we've seen Lockheed Martin-3926404198\n",
-      "we've seen Lockheed Martin-3931026727\n",
-      "we've seen Shopmonkey-3930814205\n",
-      "we've seen Interclypse-3929257489\n",
-      "we've seen Mayo Clinic-3927682458\n",
-      "we've seen Netflix-3931040226\n",
-      "we've seen Trilogy International-3917539672\n",
-      "we've seen LinkedIn-3921122178\n",
-      "we've seen Netflix-3922244352\n",
-      "we've seen iSqFt-3922090249\n",
-      "we've seen Lumafield-3931029784\n",
-      "we've seen Ever-3927302676\n",
-      "we've seen Airbnb-3927279164\n",
-      "we've seen LinkedIn-3925338431\n",
-      "we've seen Ekho (YC S22)-3927314395\n",
-      "we've seen Tripalink-3919967332\n",
-      "we've seen Diesel Laptops-3930095568\n",
-      "we've seen SHEIN Technology LLC-3930836493\n",
-      "we've seen Amicus-3924707625\n",
-      "we've seen Hertz-3916825101\n",
-      "we've seen Backbone-3926154951\n",
-      "we've seen Charles Schwab-3927384721\n",
-      "we've seen Mayo Clinic School of Health Sciences-3928296915\n",
-      "we've seen Tagup, Inc.-3921372669\n",
-      "we've seen Saragossa-3919673531\n",
-      "we've seen ClickBank-3926345917\n",
-      "we've seen Midpoint Markets-3922830357\n",
-      "we've seen Open Systems Inc.-3926387167\n",
-      "we've seen Summit Human Capital-3922484161\n",
-      "we've seen Burro-3925099308\n",
-      "we've seen Donato Technologies, Inc.-3927682220\n",
-      "we've seen MoveOn-3926833972\n",
-      "we've seen Genesis Therapeutics-3921693253\n",
-      "we've seen UpRecruit-3928315595\n",
-      "we've seen Ever-3927304003\n",
-      "we've seen Standard Metrics-3929260685\n",
-      "we've seen Lyft-3928026636\n",
-      "we've seen Vooma-3925749707\n",
-      "we've seen Datum Technologies Group-3922479685\n",
-      "we've seen Accroid Inc-3930226043\n",
-      "we've seen CVS Health-3918297455\n",
-      "we've seen Microsoft-3927674438\n",
-      "we've seen City of Philadelphia-3922421297\n",
-      "we've seen Saragossa-3924260826\n",
-      "we've seen Genesis Therapeutics-3923616537\n",
-      "we've seen haku-3925247856\n",
-      "we've seen The Walt Disney Company-3927615668\n",
-      "we've seen Genesis10-3922482501\n",
-      "we've seen Airbnb-3911684094\n",
-      "we've seen Vectara-3929260702\n",
-      "we've seen Rexus Group-3929908903\n",
-      "we've seen Micro-Trak Systems, Inc.-3930341994\n",
-      "we've seen Open Systems Inc.-3919786437\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(0,max_row_default,row_increment_default):\n",
     "    base_url = f\"{base_url_prefix}{i}\"\n",
@@ -328,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -351,10 +166,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 185,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/vincentchen/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:4: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  after removing the cwd from sys.path.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>company</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>SynergisticIT</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2024-05-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Nike</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2024-05-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ashby</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2024-05-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Genesis Therapeutics</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2024-04-22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ever</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-05-16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>The Walt Disney Company</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-05-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Netflix</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-05-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Open Systems Inc.</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-05-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lockheed Martin</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-05-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LinkedIn</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-05-14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Saragossa</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-05-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tagup, Inc.</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-05-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Midpoint Markets</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-05-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Airbnb</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-05-16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         count         max\n",
+       "company                                   \n",
+       "SynergisticIT                4  2024-05-20\n",
+       "Nike                         3  2024-05-17\n",
+       "Ashby                        3  2024-05-01\n",
+       "Genesis Therapeutics         3  2024-04-22\n",
+       "Ever                         2  2024-05-16\n",
+       "The Walt Disney Company      2  2024-05-18\n",
+       "Netflix                      2  2024-05-20\n",
+       "Open Systems Inc.            2  2024-05-15\n",
+       "Lockheed Martin              2  2024-05-20\n",
+       "LinkedIn                     2  2024-05-14\n",
+       "Saragossa                    2  2024-05-13\n",
+       "Tagup, Inc.                  2  2024-05-10\n",
+       "Midpoint Markets             2  2024-05-11\n",
+       "Airbnb                       2  2024-05-16"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df=pd.DataFrame(jobs).T\n",
+    "df2=df.groupby(['company'])['date'].agg(['count','max'])\n",
+    "df2.sort_values('count',ascending=False)[df2['count']>1]"
+   ]
   },
   {
    "cell_type": "code",
